# caveman-news

./: .gitignore  AGENTS.md  README.md  config.toml  fetch.py  llm.py  pyproject.toml  reddit_sources.py  rss_sources.py  run.sh  scrape_sources.py  setup_cron.sh
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
aggregator/: __init__.py  __main__.py  llm.py
aggregator/sources/: __init__.py  github_trending.py  models.py  reddit.py  rss.py  scrape.py
docs/plan/caveman-news-local-001/: plan.yaml
layouts/_default/: list.html  single.html
news/: 2026-04-15-23-07-04.md  2026-04-15.md  2026-04-16-09-30-15.md  2026-04-16-10-05-56.md
site/: config.toml
site/content/: _index.md
site/content/ai/: 2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-26.md  2026-04-27.md  _index.md
site/layouts/_default/: baseof.html  list.html
tests/: test_rss.py  test_rss_sources.py
